# on

./: AGENTS.md  Cargo.toml  README.md
.claude/: learnings.md
.github/workflows/: release.yml
docs/: index.html  skill.md
docs/superpowers/specs/: 2026-04-12-launch-cli-design.md
src/: browser.rs  config.rs  editor.rs  git.rs  iterm.rs  lib.rs  main.rs  port.rs  process.rs  selection.rs  state.rs  tmux.rs
src/checks/: mod.rs
src/launcher/: mod.rs
