[package]
name = "on"
version = "0.3.3"
edition = "2021"
license = "MIT"
description = "A CLI tool to launch your dev environment with one command"
repository = "https://github.com/rickyshin93/on"
homepage = "https://github.com/rickyshin93/on"

[lib]
name = "on"
path = "src/lib.rs"

[[bin]]
name = "on"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
colored = "3.1"
shellexpand = "3.1"
regex = "1.12"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
anyhow = "1.0"

[package.metadata.release]
publish = false              # not publishing to crates.io
push = true
push-remote = "origin"
tag-prefix = "v"
tag-name = "v{{version}}"
pre-release-commit-message = "chore: release v{{version}}"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common patterns that pedantic flags too aggressively
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
